# cardano-sl

./: .gitignore  .nonsense  .stylish-haskell.yaml  CODEOWNERS  Makefile  appveyor.yml  default.nix  fetch-nixpkgs.nix  nixpkgs-src.json  release.nix  stack.yaml
.buildkite/: pipeline.yml
auxx/: Main.hs  README.md  cardano-sl-auxx.cabal
auxx/src/: AuxxOptions.hs  Command.hs  Lang.hs  Mode.hs  Plugin.hs  Repl.hs
auxx/test/: Test.hs
benchmarks/: parse.hs
binary/: cardano-sl-binary.cabal
binary/test/: cardano-sl-binary-test.cabal  test.hs
binary/test/Test/Pos/Binary/: BiSerialize.hs  Helpers.hs  Simple.hs  Tripping.hs
binary/test/Test/Pos/Binary/Cbor/: CborSpec.hs
binary/test/Test/Pos/Cbor/: Canonicity.hs  RefImpl.hs
binary/test/golden/: prop_golden_TestBigInteger
block/: cardano-sl-block.cabal
block/bench/: Block.hs
client/: README.md  cardano-sl-client.cabal
core/: cardano-sl-core.cabal
core/Pos/: Core.hs
crypto/: cardano-sl-crypto.cabal
crypto/Pos/: Crypto.hs
crypto/test/: test.hs
db/Pos/: DB.hs
delegation/: cardano-sl-delegation.cabal
docs/: auxx.md  code-organisation-guidelines.md
docs/how-to/: launch-testnet.md
docs/network/: status_14052018.md
docs/rules/: property-testing.org
explorer/: cardano-sl-explorer.cabal
explorer/bench/: Main.hs
explorer/test/: Test.hs
faucet/: .gitignore  ChangeLog.md  README.md  cardano-sl-faucet.cabal  default.nix  generated-wallet-details.json  package.yaml  shell.nix  test-config.json.template
faucet/server/: Main.hs
generator/: cardano-sl-generator.cabal
generator/app/: VerificationBench.hs
generator/test/: Test.hs
infra/: README.md  cardano-sl-infra.cabal
infra/Pos/: Discovery.hs  Ntp.hs  Reporting.hs  Shutdown.hs  StateLock.hs  Statistics.hs
infra/test/: Spec.hs  test.hs
lib/: cardano-sl.cabal  configuration.yaml
lib/test/: Test.hs
lrc/: README.md  cardano-sl-lrc.cabal
networking/: README.md  cardano-sl-networking.cabal
networking/examples/: Discovery.hs  PingPong.hs
networking/src/: JsonLog.hs  Node.hs
networking/test/: Test.hs
nixos-tests/: wallet-api.nix
node/: Main.hs  cardano-sl-node.cabal
pkgs/: default.nix  generate.sh
scripts/: common-functions.sh  package-dep-graph.sh
scripts/analyze/: logs.hs
scripts/bench/: buildbench.sh
scripts/ci/: ci.sh
scripts/haskell/: dependencies.hs
scripts/launch/: Test.hs  demo.sh
ssc/: README.md  cardano-sl-ssc.cabal
ssc/Pos/: Ssc.hs
tools/: cardano-sl-tools.cabal
tools/Launcher/: Environment.hs  Logging.hs
tools/test/: Test.hs
txp/: cardano-sl-txp.cabal
txp/Pos/: Script.hs
update/: cardano-sl-update.cabal
util/: README.md  cardano-sl-util.cabal
util/Pos/: Util.hs
util/test/: test.hs
utxo/: utxo.cabal
wallet/: cardano-sl-wallet.cabal
wallet-new/: README.md  cardano-sl-wallet-new.cabal
wallet-new/bench/: Main.hs
wallet-new/docs/: references.bib  spec.tex
(+1131 files in other folders)
