name:                cardano-sl-binary-test
version:             1.1.0
synopsis:            Cardano SL - binary serializarion (tests)
description:         This package contains test helpers for cardano-sl-binary.
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Pos.Binary.Helpers
                       Test.Pos.Cbor.Canonicity
                       Test.Pos.Cbor.RefImpl
                       Test.Pos.Binary.Tripping

  build-depends:       QuickCheck
                     , base
                     , binary
                     , bytestring
                     , cardano-sl-binary
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , cborg
                     , cereal
                     , cryptonite
                     , directory
                     , file-embed
                     , filepath
                     , formatting
                     , half
                     , hedgehog
                     , hspec
                     , mtl
                     , pretty-show
                     , quickcheck-instances
                     , safecopy
                     , template-haskell
                     , text
                     , text-format
                     , tagged
                     , universum

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring
                       GADTs

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
